--- a/student-store-api/package.json
+++ b/student-store-api/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "student-store",
+  "name": "site-week4-student-store-starter",
   "version": "1.0.0",
-  "description": "",
+  "description": "A student store project made using frontend and backend with a prisma data base.",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/server.js",
-    "seed": "node seed.js",
-    "dev": "node ./src/server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Christopher Adeniji",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.16.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "pg": "^8.11.3"
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "prisma": "^5.16.0"
   }
 }
